--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -27,6 +27,10 @@ li {
 /*****
 $$$$$$  BALISES HTML   $$$$$
 ****/
+#CV {
+  border: 1px solid #08021f;
+  border-radius: 10px;
+}
 
 #metier {
   -webkit-transition: background 1s ease-in-out;
@@ -272,7 +276,6 @@ p.flags {
 .competen {
   border: 1px solid #08021f;
   color: rgba(0, 0, 0, 0.9);
-  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   margin: 1%;
   text-align: center;
